Tried last ditch effort to get quiz to function.

--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
 *{background-color: aqua;}
+
+.input {
+    box-sizing: border-box;
+    border: 10px;
+    background-color: beige;
+    
+}
+
+
+.card {
+
+    display:flex;
+}
