--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 *{background-color: aqua;}
 
-.input {
-    box-sizing: border-box;
-    border: 10px;
-    background-color: beige;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    height: 100vh;
+}
+
+.banner {
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    border: 4px double black;
+    margin-bottom: 20px;
+    text-shadow: 10px black 10px black;
 
 }
 
-.card {
-
-    display:flex;
+.start-game-button{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
 }
