--- a/style.css
+++ b/style.css
@@ -12,13 +12,24 @@ body {
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
-    border: 4px double black;
+    border: 10px double black;
+    border-radius: 20px;
     margin-bottom: 20px;
-    text-shadow: 10px black 10px black;
+    text-shadow: 2px 2px 2px black;
+
 
 }
 
 .start-game-button{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
+    margin-left: 30px;
 }
+/* 
+p .answers {
+    color: white;
+}
+
+p .questions{
+    color: red;
+} */
