--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: 0;
     height: 100vh;
@@ -14,7 +14,7 @@ body {
     color: white;
     border: 10px double black;
     border-radius: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
     text-shadow: 2px 2px 2px black;
 
 
@@ -24,4 +24,8 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
     margin-left: 30px;
+}
+
+.answer{
+    font-weight: bold;
 }
