--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     border: 10px double black;
-    border-radius: 20px;
+    border-radius: 50px;
     margin: 20px;
     text-shadow: 2px 2px 2px black;
 
@@ -26,6 +26,6 @@ body {
     margin-left: 30px;
 }
 
-.answer{
-    font-weight: bold;
+#quiz-form {
+    font-size: x-large;
 }
